<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MP Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">Notification_control_mediaplayer</string>
    <string name="channel_description">Notification_control_mediaplayer</string>
    <string name="name_user">Tên:</string>
    <string name="email_user">Email:</string>
    <string name="password">Mật khẩu</string>
    <string name="anh_bia">Ảnh Bìa</string>
    <string name="edit">Chỉnh Sửa</string>
    <string name="avatar">Ảnh Đại Điện</string>
    <string name="cancel">Hủy</string>
    <string name="add">Thêm</string>
    <string name="name_song">Tên Bài Hát</string>
    <string name="create_new_playlist">Tạo Playlist Mới</string>
    <string name="new_username">New Username</string>
    <string name="change_username">Đổi tên hiển thị</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Đổi Mật Khẩu</string>
    <string name="enter_password">Nhập Mật Khẩu</string>
    <string name="change_email">Đổi Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm">Xác Nhận</string>
    <string name="add_playlist">Thêm playlist</string>
    <string name="enter_name_playlist">Nhập Tên Playlist:</string>
    <string name="register">Đăng Ký</string>
    <string name="have_account">Đã có tài khoản?</string>
    <string name="login">Đăng Nhập</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="music_player_vip_pro">Music Player siêu cấp Vip Pro</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Quên Mật Khẩu</string>
    <string name="not_have_account">Chưa có tài khoản?</string>
    <string name="register_now">Đăng Ký Ngay</string>
    <string name="enter_email_address">Nhập Địa Chỉ Email:</string>
    <string name="back">Quay Trở Lại</string>
    <string name="enter_confirm_code">Nhập Mã Xác Nhận:</string>
    <string name="confirm_code">Mã Xác Nhận</string>
    <string name="doi_mat_khau">Đổi Mật Khẩu</string>
    <string name="finish">Hoàn Thành</string>
    <string name="chu_de">Chủ Đề</string>
    <string name="the_loai">Thể Loại</string>
    <string name="bai_hat">Bài Hát</string>
    <string name="xem_them">Xem thêm</string>
    <string name="album">Album</string>
    <string name="play_random">Phát Ngẫu Nhiên</string>
    <string name="add_song">Thêm Bài Hát</string>
    <string name="no_song">Không có bài hát</string>
    <string name="start_time_play">00:00</string>
    <string name="name_singer">Tên Ca Sĩ</string>
    <string name="name_playlist">Tên Playlist</string>
    <string name="name_album">Tên Album</string>
    <string name="delete">Xóa</string>
    <string name="stt">stt</string>
    <string name="no_info">Không Có Dữ Liệu :(</string>
    <string name="album_hot">Album hot</string>
    <string name="song">Bài hát</string>
    <string name="singer">Ca sĩ</string>
    <string name="playlists">Playlists</string>
    <string name="loading">Đang Lấy Dữ Liệu</string>
    <string name="category"><![CDATA[Chủ Đề & Thể Loại]]></string>
    <string name="song_play">Bài Hát:</string>
    <string name="singer_play">Ca Sĩ:</string>
    <string name="album_play">Album:</string>
    <string name="no_data">Không Có Dữ Liệu</string>
    <string name="dang_tai">Loading....!</string>
    <string name="you_may_like">Có Thể Bạn Sẽ Thích</string>
    <string name="search_recent" tools:ignore="TypographyEllipsis">Tìm Kiếm Gần Đây...</string>
    <string name="play_recent">Nghe Gần Gần Đây</string>
    <string name="no_result">Không Tìm Thấy Kết Quả</string>
    <string name="singer_goi_y">Nghệ Sĩ Nổi Bật</string>
    <string name="bxh">Bảng Xếp Hạng</string>
    <string name="edit_info_user">Chỉnh Sửa Thông Tin</string>
    <string name="logout">Đăng xuất</string>

    <string name="exit">Thoát</string>
    <string name="save_result">Bạn Có Muốn Lưu Kết Quả?</string>
    <string name="yes">Có</string>
    <string name="delete_playlist">Xóa Playlist</string>
    <string name="change_name">Đổi Tên</string>
    <string name="mpvp">Music Player Vip Pro</string>
    <string name="cahnge_name_playlist">Đổi Tên Playlist</string>
    <string name="update">Cập Nhật</string>
    <string name="love">Thích</string>
    <string name="add_to_playlist">Thêm Vào Playlist</string>
    <string name="add_to_queue">Thêm vào hàng chờ</string>
    <string name="download">Tải Về</string>
    <string name="confirm_email">Xác Nhận Email</string>
    <string name="search">Search....</string>
    <string name="delete_history_search_title">Xóa lịch sử tìm kiếm?</string>
    <string name="are_you_sure">Bạn có chắc chắn?</string>
    <string name="done">Thực hiện</string>
    <string name="all">Tất cả</string>
    <string name="playlist">Playlist</string>
    <string name="search_failed">Tìm kiếm thất bại!! 😢😢</string>
    <string name="personal">Cá nhân</string>
    <string name="home">Trang chủ</string>
    <string name="news">Bảng tin</string>
    <string name="new_song">Nhạc mới</string>
    <string name="genre">Thể loại</string>
    <string name="top_100">Top 100</string>
    <string name="top_mv">Top Mv</string>
    <string name="VIP">VIP</string>
    <string name="featured_singer">Ca sĩ nổi bật</string>
    <string name="contributing_artists">Nghệ sĩ đóng góp</string>
    <string name="like">Thích</string>
    <string name="luot_thich">Lượt thích</string>
    <string name="comment">Bình luận</string>
    <string name="options">Tùy chọn</string>
    <string name="subtitle" translatable="false">Subtitle</string>
    <string name="play_failed">Trình phát nhạc lỗi</string>
    <string name="song_name">"Tên bài hát: "</string>
    <string name="singers_name">"Tên ca sĩ: "</string>
    <string name="_or">Hoặc</string>
    <string name="login_with_google">Đăng nhập với Google</string>
    <string name="press_again_to_exit">Nhấn Lần Nữa Để Thoát</string>
    <string name="missing_email">Email trống</string>
    <string name="missing_password">Mật Khẩu Trống</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="missing_username">Tên người dùng trống</string>
    <string name="not_enough_length_username">Tên người dùng tối thiểu 6 kí tự</string>
    <string name="not_enough_length_password">Mật khẩu tối thiểu 6 kí tự</string>
    <string name="pasword_not_matching">Mật khẩu không trùng khớp</string>
    <string name="check_email_to_finish">Vui lòng kiểm tra email để hoàn tất đăng ký</string>
    <string name="register_successfully">Đăng ký thành công</string>
    <string name="cant_send_verify_email">Không thể gửi email xác nhận, vui lòng thử lại</string>
    <string name="register_failure">Đăng ký thất bại, Vui lòng thử lại</string>
    <string name="please_wait">Vui lòng chờ</string>
    <string name="email_already_used">Email đã được sử dụng</string>
    <string name="email_not_found">Tài khoản không tồn tại</string>
    <string name="check_email_to_reset_password">Vui lòng kiểm tra email để tạo mật khẩu mới</string>
    <string name="verify_email">Xác nhận email</string>
    <string name="verify_email_to_login">Vui lòng kiểm tra Email để hoàn tất đăng ký.</string>
    <string name="send_email">Gửi lại</string>
    <string name="ok" translatable="false" tools:ignore="ButtonCase">Ok</string>
    <string name="user_doesnt_have_password">Tài khoản chưa được tạo mật khẩu</string>
    <string name="email_password_invalid">Tài khoản hoặc mật khẩu không hợp lệ</string>
    <string name="display_name">Tên hiển thị</string>
    <string name="user_description">Tiểu sử</string>
    <string name="save">Lưu</string>
    <string name="on_device">Trên thiết bị</string>
    <string name="please_enter_username">Vui lòng nhập tên người dùng</string>
    <string name="update_failed">Cập nhật thất bại! Vui lòng thử lại</string>
    <string name="play_song">Phát Nhạc</string>
    <string name="follow">Quan Tâm</string>
    <string name="search_text">Tìm kiếm</string>
    <string name="favourite">Yêu thích</string>
    <string name="request_perrmission">Bạn cần cấp quyền để thực hiện tính năng này</string>
    <string name="change_not_save">Thay đổi chưa được lưu, bạn có muốn thoát?</string>
    <string name="no">Không</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="delete_successfully">Xóa thành công</string>
    <string name="network_error">Lỗi mạng</string>
    <string name="view_less">Hiển thị ít</string>
    <string name="post_comment">Đăng bình luận</string>
    <string name="minute_ago">" phút trước"</string>
    <string name="hour_ago">" giờ trước"</string>
    <string name="day_ago">" ngày trước"</string>
    <string name="month_ago">" Tháng trước"</string>
    <string name="comment_min_length">Bình luận phải có tối thiếu 5 ký tự</string>
    <string name="not_have_comment">Chưa có bình luận</string>
    <string name="be_the_first_to_comment">Trở thành người đầu tiên bình luận.</string>
    <string name="connecting_internet">Vui lòng kiểm tra kết nối Internet</string>
    <string name="title_activity_base" translatable="false">BaseActivity</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="settings">Cài đặt</string>
    <string name="language">Ngôn ngữ</string>
    <string name="choose_language">Chọn ngôn ngữ</string>
    <string name="save_settings">Lưu cài đặt</string>
    <string name="restart_to_apply_change">Khởi động lại để lưu cài đặt?</string>
    <string name="please_enter_name">Vui lòng nhập tên</string>
    <string name="the_name_already_exist">Tên này đã tồn tại</string>
    <string name="no_song_in_your_playlist">Không có bài hát trong playlist của bạn</string>
    <string name="playlist_empty">Danh sách trống</string>
    <string name="added">Đã thêm</string>
    <string name="online" translatable="false">Online</string>
    <string name="complete">Xong</string>
    <string name="recent">Gần đây</string>
    <string name="enter_current_password">Nhập Mật Khẩu Hiện Tại</string>
    <string name="enter_new_password">Nhập Mật Khẩu Mới</string>
    <string name="missing_new_password">Mật khẩu mới trống</string>
    <string name="password_invalid">Mật khẩu không đúng</string>
    <string name="change_password_successfully">Đổi mật khẩu thành công</string>
    <string name="new_release">Mới phát hành</string>
    <string name="notification">Thông báo</string>
    <string name="feature_improving">Tính năng này đang trong quá trình phát triển. Vui lòng thử lại sau.</string>
    <string name="top_love_song">Yêu thích nhiều nhất</string>
    <string name="highlight">Nổi bật</string>
    <string name="love_song">Bài hát yêu thích</string>
    <string name="play">Phát</string>
    <string name="unlike">Bỏ thích</string>
    <string name="song_exist">Bài hát đã tồn tại</string>
    <string name="favourite_album">Album yêu thích</string>
    <string name="downloading">Đang tải xuống</string>
    <string name="downloading_failed">Tài xuống thất bại</string>
    <string name="download_successfully">Tải xuống thành công</string>
</resources>