<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activity.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar_settings"
        app:title="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_language"
        style="@style/SettingsButton"
        android:text="@string/language"
        app:icon="@drawable/ic_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_password"
        style="@style/SettingsButton"
        android:text="@string/change_password"
        app:icon="@drawable/ic_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        style="@style/SettingsButton"
        android:text="@string/logout"
        app:icon="@drawable/ic_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>