<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Fragment.Login.RegisterSuccessfullyFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="@drawable/img_email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_successfully"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_email_to_finish" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_navigate_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F96060"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:cornerRadius="4dp"
        tools:targetApi="lollipop" />
</LinearLayout>