<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/music2"
        tool:layout_constraintEnd_toEndOf="parent"
        tool:layout_constraintStart_toStartOf="parent"
        tool:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_login"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="#0d6e6a"
        android:textSize="45sp"
        android:textStyle="bold"
        tool:layout_constraintEnd_toEndOf="parent"
        tool:layout_constraintStart_toStartOf="parent"
        tool:layout_constraintTop_toBottomOf="@id/img_login" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/music_player_vip_pro"
        android:textColor="#0d6e6a"
        android:textSize="16sp"
        android:textStyle="bold"
        tool:layout_constraintEnd_toEndOf="parent"
        tool:layout_constraintStart_toStartOf="parent"
        tool:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/enter_email_address"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tool:layout_constraintEnd_toEndOf="parent"
        tool:layout_constraintHorizontal_bias="0.0"
        tool:layout_constraintStart_toStartOf="@+id/edt_input_email_login"
        tool:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_input_email_login"
        style="@style/LoginTextInputLayoutOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        tool:endIconMode="clear_text"
        tool:hintTextColor="@color/boxInputFields"
        tool:layout_constraintEnd_toEndOf="parent"
        tool:layout_constraintStart_toStartOf="parent"
        tool:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_forgot_password"
            style="@style/LoginTextInputEditTextOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:textSize="22sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        style="@style/RoundedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        tool:layout_constraintEnd_toEndOf="parent"
        tool:layout_constraintStart_toStartOf="parent"
        tool:layout_constraintTop_toBottomOf="@+id/edt_input_email_login" />

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        tool:layout_constraintEnd_toEndOf="parent"
        tool:layout_constraintStart_toStartOf="parent"
        tool:layout_constraintTop_toBottomOf="@id/btn_confirm">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:padding="0dp"
            android:text="@string/register_now" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        tool:layout_constraintEnd_toEndOf="parent"
        tool:layout_constraintStart_toStartOf="parent"
        tool:layout_constraintTop_toBottomOf="@id/register_layout">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#0d6e6a" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/_or"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#0d6e6a" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_google"
        style="@style/LoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        tool:layout_constraintEnd_toEndOf="parent"
        tool:layout_constraintStart_toStartOf="parent"
        tool:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tool:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
